# kodekloud-downloader

./: .gitignore  Dockerfile  README.md  colab_notebook.ipynb  pyproject.toml
.github/workflows/: README.md  ci.yml  python-publish.yml
src/kodekloud_dl/: cli.py  helpers.py  main.py  models.py
src/kodekloud_downloader/: browser.py  cli.py  enums.py  helpers.py  main.py  models.py  yt_dlp_patch.py
src/kodekloud_downloader/models/: course.py  courses.py  helper.py  quiz.py
static/: download_content.txt
tests/: test_kodekloud_dl.py
