[tool.poetry]
name = "kodekloud-downloader"
version = "0.1.0"
description = "Simple downloaded for https://kodekloud.com/"
readme = "README.md"
authors = ["Roy, Debakar <debakar.roy@outlook.com>"]
repository = "https://github.com/debakarr/kodekloud-downloader"

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2023.2.17"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
prettytable = "^3.7.0"
markdownify = "^0.11.6"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
datamodel-code-generator = { extras = ["http"], version = "^0.17.1" }
flake8 = { version = "^6.0.0", python = ">=3.8.1,<4.0" }
flake8-bugbear = "^23.2.13"
flake8-black = "^0.3.6"
flake8-bandit = "^4.1.1"
flake8-comprehensions = "^3.10.1"
flake8-isort = "^6.0.0"
pep8-naming = "^0.13.3"
pytest-cov = "^4.0.0"
mypy = "^1.0.1"
black = "^23.1.0"
types-requests = "^2.28.11.15"

[tool.poetry.scripts]
kisskh = "kodekloud_dl.cli:kodekloud"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
