[project]
name = "kodekloud-downloader"
version = "0.3.0"
description = "Simple downloaded for https://kodekloud.com/"
readme = "README.md"
authors = [
    { name = "Roy, Debakar", email = "debakar.roy@outlook.com" },
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.2",
    "beautifulsoup4>=4.12.2",
    "prettytable>=3.7.0",
    "markdownify>=0.11.6",
    "validators>=0.20.0",
    "click>=8.1.3",
    "yt-dlp>=2023.3.4",
    "pydantic>=2.9.1",
]

[project.urls]
Repository = "https://github.com/debakarr/kodekloud-downloader"

[project.scripts]
kodekloud = "kodekloud_downloader.cli:kodekloud"

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0.1",
    "playwright>=1.40.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.12",
    "types-requests>=2.28.11.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kodekloud_downloader"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # allow assert (used in tests)
    "B008",  # allow function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"src/kodekloud_downloader/browser.py" = [
    "UP045",  # Optional[X] needed for Python 3.8 compat
    "S110",   # try-except-pass is intentional for fallback logic
    "S112",   # try-except-continue is intentional for retry logic
    "S603",   # subprocess paths are from a hardcoded system list
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
